<resources>
    <string name="app_name">羚机</string>
    <string name="wake_up_default">我正在听...</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="after_tomorrow">后天</string>
    <string name="desc_weather_wind_volume">风力大小</string>
    <string name="desc_weather_temp">温度</string>
    <string name="distance">相距</string>
    <string name="status">当前状态:</string>
    <string name="stock_default_code">代码</string>
    <string name="stock_default_name">名称</string>
    <string name="stock_default_last_price">现价</string>
    <string name="stock_default_changein_price">涨跌</string>
    <string name="stock_default_changein_percentage">涨跌%</string>
    <string name="load_more">正在加载更多...</string>
    <string name="load_finished">加载完成!</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放可以刷新数据</string>
    <string name="refreshing">正在刷新数据...</string>
    <string name="airtrip_arrive_time">航班到达时间是</string>
    <string name="airtrip_dept_time">航班出发时间是</string>
    <string name="airtrip_destination">航班目的地是</string>
    <string name="airtrip_airline_name">%1$s航班属于%2$s</string>
    <string name="airtrip_dept">航班出发地是</string>
    <string name="airtrip_food">航班提供的餐饮是</string>
    <string name="airtrip_exit">航班的出口是</string>
    <string name="airtrip_luggage">航班的行李转盘是</string>
    <string name="airtrip_no_exit">航班未查询到出口</string>
    <string name="airtrip_no_food">航班未提供餐饮服务</string>
    <string name="airtrip_no_luggage">航班未查询到行李转盘</string>
    <string name="airtrip_checkin_num">航班值机柜台是</string>
    <string name="airtrip_gate">航班登机口是%d号</string>
    <string name="airtrip_mode">航班机型是</string>
    <string name="airtrip_baggage_allowance">您的航班限重是%s千克</string>
    <string name="airtrip_your_flight_no">"您的航班号是%s"</string>
    <string name="airtrip_dept_terminal">航班出发航站楼是</string>
    <string name="airtrip_arrive_terminal">航班到达航站楼是</string>
    <string name="airtrip_airport_temperature">%1$s当前气温%2$s</string>
    <string name="airtrip_airport_weather">%1$s今天天气%2$s,温度%3$s-%4$s</string>
    <string name="airtrip_airport_visibility">%1$s能见度%2$s,%3$s</string>
    <string name="airtrip_air_quality">pm2.5指数%1$s，%2$s</string>
    <string name="airtrip_your_seat_no">您的座位号是：%s</string>
    <string name="airtrip_did_not_choose_seat">您还没有选择座位</string>
    <string name="airtrip_flight_distance">%1$s航班飞行里程是%2$s</string>
    <string name="airtrip_boarding_time">您的航班登机时间是%1$s</string>
    <string name="airtrip_empty_alert">抱歉，暂无相关数据</string>
    <string name="airtrip_flight_position">%1$s航班在%2$s上空</string>
    <string name="airtrip_specified_flight_position">%1$s航班在%2$s上空</string>
    <string name="air_Quality">空气质量指数</string>
    <string name="traffic_condition">限号为</string>
    <string name="radio_album">专辑</string>
    <string name="radio_track">节目</string>
    <string name="search_airtrip">为你查询到以下航班</string>
    <string name="bluetooth_not_connected">蓝牙未连接</string>
    <string name="airtrip_not_login">航旅未登录,不能查询个人行程</string>
    <string name="no_personal_trip">没有个人行程信息</string>
    <string name="no_boarding_info">没有登机时间信息</string>
    <string name="no_follow_trip">没有关注行程信息</string>
    <string name="check_in">值机柜台</string>
    <string name="volume_up">音量+</string>
    <string name="volume_down">音量-</string>
    <string name="volume_out_range">音量超出范围</string>
    <string name="u_disk_music">u盘音乐</string>
    <string name="bt_music">蓝牙音乐</string>
    <string name="online_music">网络音乐</string>
    <string name="airtrip_detail">航班详情如下</string>
    <string name="airtrip_your_flight">您的航班</string>
    <string name="airtrip_your_follow_flight">您关注的航班</string>
    <string name="airtrip_status_plan">尚未起飞，计划起飞时间为%s</string>
    <string name="airtrip_status_delay">已延误</string>
    <string name="airtrip_status_departure">已起飞，起飞时间为%s</string>
    <string name="airtrip_status_arrived">已到达，实际到达时间为%s</string>
    <string name="airtrip_status_canceled">已取消</string>
    <string name="airtrip_status_alternate">已备降</string>
    <string name="airtrip_status_back">已返航</string>
    <string name="airtrip_status_none">暂无航班信息</string>
    <string name="airtrip_status_lost">已失联</string>
    <string name="airtrip_status_warning">处于预警状态</string>
    <string name="airtrip_plane_age">%1$s航班机龄是%2$s</string>
    <string name="airtrip_search_nolist">抱歉，没有找到你需要的航班</string>
    <string name="airtrip_retry">重试</string>
    <string name="no_audio">暂时没有歌曲了，请稍后再试</string>
    <string name="request_error">出错了，请稍后再试</string>
    <string name="login_qr_text1">请用航旅纵横APP扫描二维码进行账户绑定</string>
    <string name="login_qr_text2">非航旅纵横注册用户请先安装航旅纵横APP进行注册</string>
    <string name="button_settings">设置</string>
    <string name="button_message">消息中心</string>
    <string name="button_logout">解绑</string>
    <string name="login_auth">已认证</string>
    <string name="login_not_auth">未认证</string>
    <string name="login_not_login">未登录</string>
    <string name="login_fail">获取登陆地址失败,请重试</string>
    <string name="seat_select_title">在线选座</string>
    <string name="seat_select_success">选座成功</string>
    <string name="seat_select_title2">您选择的座位是</string>
    <string name="seat_select_title3">您可直接语音说出想选的座位 例如32K，\n前排靠窗</string>
    <string name="seat_select_ok">确认</string>
    <string name="seat_title1">可选的</string>
    <string name="seat_title2">锁定座位</string>
    <string name="seat_title3">不可选</string>
    <string name="seat_title4">您的座位</string>
    <string name="seat_title5">紧急出口</string>
    <string name="air_no_flight">很抱歉, 没有为您找到符合条件的航班动态!</string>
    <string name="no_plan_fight_text">无相关航班</string>
    <string name="flight_search_text">航班搜索</string>
    <string name="bag_turntable">行李转盘</string>
    <string name="exit_door_num">出口</string>
    <string name="seartch_by_flight_no">按航班号</string>
    <string name="seartch_by_flight_city">按城市名</string>
    <string name="flight_no">航班号</string>
    <string name="flight_take_off">起飞</string>
    <string name="flight_landing">降落</string>
    <string name="flight_date">日期</string>
    <string name="search_history">搜索历史</string>
    <string name="mine_login_tips">请用航旅纵横APP扫描二维码进行账户绑定</string>
    <string name="mine_login_tips_gluid">扫码入口：个人中心-航旅口令-拍口令</string>
    <string name="mine_login_tips2">非航旅纵横注册用户先安装航旅纵横APP进行注册</string>
    <string name="no_message">暂无消息</string>
    <string name="login_out_tips">是否解绑航旅账户</string>
    <string name="string_yes">确定</string>
    <string name="string_cancel">取消</string>
    <string name="search_result">搜索结果</string>
    <string name="ume_tips">坐飞机用航旅纵横</string>
    <string name="no_flight_tips">搜索不到符合条件的航班</string>
    <string name="flight_detail">航班详情</string>
    <string name="expected">预计</string>
    <string name="flight_search">航班查询</string>
    <string name="city_search">航班动态</string>
    <string name="weather_clear">晴</string>
    <string name="weather_cloudy">多云</string>
    <string name="weather_rain">雨</string>
    <string name="weather_snow">雪</string>
    <string name="visible">能见度</string>
    <string name="traffic_normal">流量正常</string>
    <string name="traffic_small_delay">小面积延误</string>
    <string name="traffic_large_delay">大面积延误</string>
    <string name="air_port_flight">架航班</string>
    <string name="plan_text">计划</string>
    <string name="boarding_time">登机时间</string>
    <string name="boarding_port">登机口</string>
    <string name="seat_number">座位号</string>
    <string name="no_network_tips">网络连接失败，请稍后再试</string>
    <string name="x53_no_network_tips">当前网络异常，请稍后再试</string>
    <string name="card_title">航旅纵横</string>
    <string name="card_personal_title">最新飞行计划</string>
    <string name="card_sucscribe_title">最新关注航班</string>
    <string name="x53_card_notlogin">还未登陆航旅纵横</string>
    <string name="card_planestatus">计划</string>
    <string name="netexception">网络异常</string>
    <string name="cancel_sucscribe_ok">取消关注成功</string>
    <string name="sucscribe_ok">关注成功</string>
    <string name="label_all_list">全部歌曲</string>
    <string name="label_fav_list">我的收藏</string>
    <string name="label_smart_list">智能歌单</string>
    <string name="label_local_list">本地歌曲</string>
    <string name="label_local_fav_list">本地单曲收藏</string>
    <string name="label_identify_list">听歌识曲</string>
    <string name="label_usb_list">USB歌曲</string>
    <string name="label_bluetooth_list">蓝牙歌曲</string>
    <string name="label_ipod_list">iPod歌曲</string>
    <string name="label_video_list">视频</string>
    <string name="label_radio_list">电台歌单</string>
    <string name="label_netmusic_list">网络歌单</string>
    <string name="label_nettoday_list">今日歌单</string>
    <string name="label_net_fav_list">收藏单曲</string>
    <string name="label_mlt_list">相似歌曲</string>
    <string name="label_baidu_list">网络音乐</string>
    <string name="label_aux_list">AUX音乐</string>
    <string name="label_wechat_list">微信分享</string>
    <string name="label_search_list">搜索结果</string>
    <string name="label_ta_mlt_list">相似歌曲</string>
    <string name="label_ta_title_list">同名歌曲</string>
    <string name="label_ta_artist_list">听Ta的歌</string>
    <string name="kuwo_apk_music">酷我音乐</string>
    <string name="qplay_auto_music">QPlay auto</string>
    <string name="history_music">历史歌单</string>
    <string name="default_bluetooth_title">蓝牙音乐</string>
    <string name="default_aux_title">AUX音乐</string>
    <string name="music_unmounted">U盘已卸载</string>
    <string name="music_unread_information">未读取到U盘多媒体信息</string>
    <string name="music_unread_information2">未读取到本地多媒体信息</string>
    <string name="music_no_blue">暂无蓝牙音乐</string>
    <string name="discovery2">风格音乐</string>
    <string name="warning_kwuo_100m">歌曲存放空间已不足，请清理</string>
    <string name="warning_kwuo_50m">酷我歌曲存放空间已不足，请清理</string>
    <string name="warning_kwuo_10m">酷我歌曲存放空间已不足，请清理</string>
    <string name="warning_clear_all">全部清理</string>
    <string name="warning_file_manager">管理文件</string>
    <string name="back">返回</string>
    <string name="back_to_home">回首页</string>
    <string name="phone_call_answer">接听</string>
    <string name="phone_call_answer1">接电话</string>
    <string name="phone_call_cancel">挂断</string>
    <string name="phone_call_cancel1">取消</string>
    <string name="add_code">设置安全码</string>
    <string name="add_code1">请输入新的\n安全码</string>
    <string name="add_code3">两次输入的安全码不一致</string>
    <string name="v_code3">找回安全码 &gt;</string>
    <string name="v_code4">安全码已输错5次</string>
    <string name="v_code5">您可以选择</string>
    <string name="v6">取消</string>
    <string name="v15">将为你开启最后一公里步行导航</string>
    <string name="v16">开启:%s</string>
    <string name="v17">离车模式</string>
    <string name="out_of_app_hint_title">你可以这样说:</string>
    <string name="out_of_app_hint_wechat">发微信给刘德华</string>
    <string name="out_of_app_hint_nav">我要去天安门</string>
    <string name="out_of_app_hint_phone">打电话给妈妈</string>
    <string name="out_of_app_hint_music">想听周杰伦的歌</string>
    <string name="out_of_app_hint_radio">我要听105.8</string>
    <string name="out_of_app_hint_food">附近有什么好吃的</string>
    <string name="out_of_app_hint_weather">上海明天天气</string>
    <string name="out_of_app_hint_news">播放科技新闻</string>
    <string name="permiss_title">体验完美羚机</string>
    <string name="permiss_title_one">为了提供更好的使用体验</string>
    <string name="permiss_title_two">需要获取以下权限</string>
    <string name="navi_text">位置定位权限</string>
    <string name="navi_hint">准确定位您的位置，精确规划每一个行程</string>
    <string name="mic_text">麦克风权限</string>
    <string name="mic_hint">听懂您，并执行您的每一个指令</string>
    <string name="storage_text">储存权限</string>
    <string name="storage_hint">保存您的相关数据</string>
    <string name="call_text">电话权限</string>
    <string name="call_hint">我可以帮您在驾驶时候，更加安全的拨打、接听电话</string>
    <string name="start_setting">开始设置</string>
    <string name="ariel_welcome_prompt">欢迎进入驾驶模式</string>
    <string name="welcome_prompt_str">尊贵的%s车主</string>
    <string name="welcome_doing_prompt">正在为您</string>
    <string name="welcome_adjust_seat">调节座椅</string>
    <string name="welcome_adjust_rearview">调节后视镜</string>
</resources>