<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp342"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:gravity="center_vertical"
        android:background="@drawable/voice_float_view_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp23"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20"
            android:text="@string/out_of_app_hint_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp18"
            android:layout_marginLeft="@dimen/dp23"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:text="@string/out_of_app_hint_wechat"
            android:drawableLeft="@drawable/icon_wechat"
            android:drawablePadding="@dimen/dp11"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginLeft="@dimen/dp23"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:text="@string/out_of_app_hint_nav"
            android:drawableLeft="@drawable/icon_navi"
            android:drawablePadding="@dimen/dp11"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginLeft="@dimen/dp23"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:text="@string/out_of_app_hint_phone"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="@dimen/dp11"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginLeft="@dimen/dp23"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:text="@string/out_of_app_hint_music"
            android:drawableLeft="@drawable/icon_music"
            android:drawablePadding="@dimen/dp11"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginLeft="@dimen/dp23"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:text="@string/out_of_app_hint_radio"
            android:drawableLeft="@drawable/icon_radio"
            android:drawablePadding="@dimen/dp11"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginLeft="@dimen/dp23"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:text="@string/out_of_app_hint_food"
            android:drawableLeft="@drawable/icon_dianping"
            android:drawablePadding="@dimen/dp11"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginLeft="@dimen/dp23"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:text="@string/out_of_app_hint_weather"
            android:drawableLeft="@drawable/icon_weather"
            android:drawablePadding="@dimen/dp11"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginLeft="@dimen/dp23"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:text="@string/out_of_app_hint_news"
            android:drawableLeft="@drawable/icon_news"
            android:drawablePadding="@dimen/dp11"/>
    </LinearLayout>
</FrameLayout>

