<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#5c3ed0">


    <ImageView
        android:id="@+id/animation_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/welcome_animlist" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="287dp"
        android:text="@string/ariel_welcome_prompt"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ariel_welcome_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="322dp"
        android:text="@string/welcome_prompt_str"
        android:textColor="#ffffff"
        android:textSize="27sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="130dp"
        android:text="@string/welcome_doing_prompt"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="84dp"
        android:text="@string/welcome_adjust_seat"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:text="@string/welcome_adjust_rearview"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>
