<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white_bg_f6"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/permiss_title"
            android:textColor="@color/blue_text"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/permiss_title_one"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/permiss_title_two"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/permiss_shape"
            android:paddingLeft="21dp"
            android:paddingRight="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp">

                <ImageView
                    android:id="@+id/navi_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/navi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_toRightOf="@+id/navi_img"
                    android:text="@string/navi_text"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@+id/navi_img"
                    android:text="@string/navi_hint"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp">

                <ImageView
                    android:id="@+id/mic_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/mic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_toRightOf="@+id/mic_img"
                    android:text="@string/mic_text"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@+id/mic_img"
                    android:text="@string/mic_hint"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp">

                <ImageView
                    android:id="@+id/storage_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/storage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_toRightOf="@+id/storage_img"
                    android:text="@string/storage_text"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@+id/storage_img"
                    android:text="@string/storage_hint"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp">

                <ImageView
                    android:id="@+id/call_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/call" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_toRightOf="@+id/call_img"
                    android:text="@string/call_text"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@+id/call_img"
                    android:text="@string/call_hint"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />

            </RelativeLayout>
        </LinearLayout>
1
        <TextView
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/login_btn_select"
            android:gravity="center"
            android:text="@string/start_setting"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp20" />

    </LinearLayout>
</ScrollView>